tests/failing/parser/trait_fn.ri
trait Trait {
    #[inline]
    pub fn vis();
}
