tests/failing/parser/trait_fn.out
tests/failing/parser/trait_fn.ri:2:5: error: attributes should be applied to a function or method
    |
  2 |     #[inline]
    |     ^
tests/failing/parser/trait_fn.ri:3:5: error: unnecessary visibility qualifier
    |
  3 |     pub fn vis();
    |     ^
rivetc: error: could not compile package `core`, aborting due to 2 previous errors